# OpenTalker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  DOCKER_GUIDE.md  Dockerfile  FINAL_REPORT.md  GHCR_PUSH_STATUS.md  LICENSE  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  README.workspace.md  build_docker.sh  docker-compose.ghcr.yml  docker-compose.workspace.yml  docker-compose.yml  pyproject.toml  test_gateway_tts.sh  test_model_success.py
.github/: CHECKLIST.md  QUICKREF.md  SETUP.md  SUMMARY.md  WORKFLOWS.md
.github/workflows/: ci.yml  dependencies.yml  docker.yml
app/: __init__.py  main.py  models.py
app/core/: __init__.py  gpu_monitor.py  model_manager.py
app/routers/: audio.py  health.py
app/services/: stt_service.py  tts_service.py
app/utils/: audio_utils.py
docs/: DOCKERFILE_OPTIMIZATION_COMPARISON.md  DOCKER_GUIDE.md  DOCKER_IMAGES_GUIDE.md  DOCKER_OPTIMIZATION.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_TEST_REPORT.md  README.md
docs/archive/: DOCKER_TEST_STATUS.md  GATEWAY_TTS_FIX.md  GHCR_PUSH_STATUS.md  SESSION_SUMMARY.md  test-workspace.md
examples/docker/: README.md  docker-compose.4gb-optimized.yml  docker-compose.china.yml  docker-compose.stt-only.yml  docker-compose.tts-only.yml  docker-compose.workspace.yml
gateway/: Dockerfile  README.md  pyproject.toml
gateway/app/: config.py  main.py
gateway/app/routers/: audio.py  health.py
openspec/changes/openai-compatible-audio-api/: design.md  proposal.md  tasks.md
openspec/changes/openai-compatible-audio-api/specs/gpu-monitoring/: spec.md
openspec/changes/openai-compatible-audio-api/specs/mirror-configuration/: spec.md
openspec/changes/openai-compatible-audio-api/specs/model-management/: spec.md
openspec/changes/openai-compatible-audio-api/specs/speech-to-text-api/: spec.md
openspec/changes/openai-compatible-audio-api/specs/text-to-speech-api/: spec.md
scripts/: __init__.py  deploy-workspace.sh  download_models.sh  init_models.py
stt-service/: Dockerfile  Dockerfile.optimized  Dockerfile.optimized.v2  README.md  pyproject.toml
stt-service/app/: config.py  main.py  service.py
tests/: test_sample.py
tts-service/: Dockerfile  Dockerfile.optimized  Dockerfile.optimized.v2  README.md  pyproject.toml
tts-service/app/: config.py  main.py  service.py
workspace-backup/: pyproject.toml
workspace-backup/app/: config.py  main.py
workspace-backup/app/routers/: __init__.py  audio.py
workspace-backup/app/services/: __init__.py
workspace-backup/app/utils/: audio_utils.py  openai_compat.py
