# ============================================
# OpenTalker Workspace Configuration
# ============================================
# 
# 这是一个 uv workspace 项目，包含三个独立的子项目：
# - gateway: API 网关（OpenAI 兼容接口）
# - stt-service: STT 服务（Qwen3-ASR）
# - tts-service: TTS 服务（IndexTTS2）
#
# 每个子项目有独立的依赖管理，解决 transformers 版本冲突问题
# ============================================

[project]
name = "opentalker-workspace"
version = "0.2.0"
description = "OpenTalker Workspace - Microservices Architecture for STT & TTS"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "DDKTopLabs", email = "contact@ddktop.com" }
]
keywords = ["speech-recognition", "text-to-speech", "qwen", "indextts", "openai-api", "microservices"]

# Workspace 本身不需要依赖
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================
# UV Workspace Configuration
# ============================================
[tool.uv.workspace]
members = [
    "gateway",
    "stt-service",
    "tts-service",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

# PyPI 镜像（清华大学）
[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# ============================================
# 代码质量工具配置
# ============================================
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
]
